# etl-watcher-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/_build/html/: .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: models.doctree
docs/_build/html/.doctrees/getting_started/: installation.doctree  quick_start.doctree
docs/_build/html/.doctrees/guides/: address_management.doctree  authentication.doctree  executions.doctree  monitoring.doctree  orchestration.doctree  watermark_management.doctree
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: models.rst.txt
docs/_build/html/api/: models.html
docs/_build/html/getting_started/: installation.html  quick_start.html
docs/_build/html/guides/: address_management.html  authentication.html  executions.html  monitoring.html  orchestration.html  watermark_management.html
docs/api/: models.rst
docs/getting_started/: quick_start.rst
docs/guides/: address_management.rst  authentication.rst  executions.rst  monitoring.rst  watermark_management.rst
src/watcher/: __init__.py  auth.py  client.py  orchestration.py
src/watcher/tests/: conftest.py  test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_orchestration.py
watcher/: client.py
watcher/models/: execution.py  pipeline.py
(+8 files in other folders)
