[project]
name = "etl-watcher-sdk"
version = "0.1.0"
description = "SDK for Watcher framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "twine>=6.2.0",
    "uv-build>=0.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cmgoffena13/etl-watcher-sdk"
Documentation = ""
