[project]
name = "etl-watcher-sdk"
version = "0.1.0"
description = "SDK for Watcher framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "docutils>=0.21.2",
    "httpx>=0.28.1",
    "myst-parser>=4.0.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.0",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-httpdomain>=1.8.1",
    "twine>=6.2.0",
    "uv-build>=0.9.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cmgoffena13/etl-watcher-sdk"
Documentation = ""

[tool.uv.build-backend]
source-exclude = [".env", "tests/**"]
wheel-exclude = [".env", "tests/**"]
